
Attempt doc list to Rd list conversion, so we can generate Rd using
tools:::print.Rd. See code in etc/parseRd.R

Try to get more tests working: R CMD check and Rd conversion to
doclist checks.

== 1.7

bugfix for when there are no objects defined in the
package. previously forall functions would stop with an error, now we
test for this condition before the line where we would get the error.

== 1.6

Only do R CMD check in tests when we run interactively. If not
CRAN/R-Forge gives a weird error.

Remove support for examples.after.return.

Multiparagraph descriptions and unit test.

Description before unit test.

Suppress warnings when we attempt to detach loaded packages, in order
to avoid these warnings:

> warnings()
Warning messages:
1: In FUN(X[[2L]], ...) :
  Created a package name, "2011-05-11 14:11:30", when none found
2: In FUN(X[[2L]], ...) :
  Created a package name, "2011-05-11 14:11:30", when none found
...

Fix warning when S4 classes are defined in package code, by setting
the .packageName variable in the env in apply.parsers, so we don't get
this warning anymore

Warning in getPackageName(where) :
  Created a package name, "2011-04-07 15:29:30", when none found

== 1.5.1

Bugfix for S4 classes by setting the globalenv in apply.parsers to the
env where we eval the pkg code. We were getting this error

Error in assign(mname, def, where) : 
  cannot add bindings to a locked environment

== 1.5

Check to make sure we are not extracting too many documentation
objects, relative to the stored .result in unit tests.

.names such as .s3method and .overwrite in inner documentation lists
are ignored for find/replacement.

.overwrite signals that all other items of the list should be used
when combining, ignoring previous values stored in those slots.

##sections<< permitted immediately after ###return value

Report which of the users' documentation objects we failed on if the
Parser Function in forall stops with an error.
